gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: services-httproute
spec:
  parentRefs:
    - name: my-gateway
      namespace: projectcontour
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /users
          method: POST
      backendRefs:
        - name: register-service
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /sessions
          method: POST
      backendRefs:
        - name: login-service
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /profile
          method: GET, PATCH
      backendRefs:
        - name: profile-service
          port: 8000
